--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,6 +1,7 @@
 {
     "/dist/js/author-bio.js": "/dist/js/author-bio.js",
     "/dist/js/boot.js": "/dist/js/boot.js",
+    "/dist/admin/css/author-bio-public.css": "/dist/admin/css/author-bio-public.css",
     "/dist/admin/css/author-bio-admin.css": "/dist/admin/css/author-bio-admin.css",
     "/dist/js/tinymce.js": "/dist/js/tinymce.js",
     "/dist/js/tinymce_icon.png": "/dist/js/tinymce_icon.png"
