--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/dist/admin/js/author-bio-frontent.js": "/dist/admin/js/author-bio-frontent.js",
     "/dist/js/author-bio.js": "/dist/js/author-bio.js",
     "/dist/js/boot.js": "/dist/js/boot.js",
     "/dist/admin/css/author-bio-public.css": "/dist/admin/css/author-bio-public.css",
