--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Author-bio-by-shortcode",
+  "name": "author-bio-ultimate",
   "version": "1.0.0",
   "description": "show author bio anywhere on your site",
   "main": "index.js",
